Fix alignment issue for submit button error message on quiz show page.

--- a/client/css/quiz_show_page.scss
+++ b/client/css/quiz_show_page.scss
@@ -37,6 +37,7 @@
       padding: 25px 5px;
       
       @media (max-width: $mobile-max) {
+        text-align: center;
         padding-bottom: 50px;
       }
     }
